TEST_PROGRAMS/INVALID/theo_szymkowiak/invalid2.min
# WILL FAIL BECAUSE TYPE complex DOESN'T EXIST

var x: int;
var y: complex;

